added problem details
